--- a/template.tex
+++ b/template.tex
@@ -6,7 +6,7 @@
 %% Instituto Superior de Engenharia de Lisboa
 %% Instituto Politécnico de Lisboa
 %%
-%% Project web page at: http://code.google.com/p/thesisisel
+%% Project web page at: https://github.com/matpato/thesisisel
 %%
 %% BUGS and SUGGESTIONS: please submit an issue at the project web page
 %%
