Add support to glossary, nomenclature; Change appendix1.tex file.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -83,3 +83,11 @@
   note =      {},
   annote =    {}
 }
+
+@ONLINE{newtest,
+  author = {Bruin, J.},
+  title = {Newtest: command to compute new test {@ONLINE}},
+  month = FEB,
+  year = {2011},
+  url = {http://www.ats.ucla.edu/stat/stata/ado/analysis/}
+}
