--- a/template.tex
+++ b/template.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Template for writing dissertations with ThesisMasterISEL
 %%
-%% Version 20130201 (Feb 2013) v1.1
+%% Version 20130704 (Jul 2013) v1.11
 %% 
 %% Instituto Superior de Engenharia de Lisboa
 %% Instituto Politécnico de Lisboa
@@ -261,12 +261,12 @@
 %%------------------------------------------------------------
 % Dedicatory text. Will only be considered for final documents,
 % i.e., "bsc" and "msc", otherwise, it will be silently ignored
-\dedicatoryfile{dedicatory} 
+\printdedicatory
 
 % Acknowledgments text. Will only be considered for final documents,
 % i.e., "bsc" and "msc", otherwise, it will be silently ignored
 % Acknowledgments will only be printed if adequate for the document type
-\acknowledgementsfile{acknowledgements}
+\printacknowledgements
 
 % Abstracts/resumes/summaries in two languages. The first abstract will
 % use the document main language and second the foreign language
