--- a/template.tex
+++ b/template.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Template for writing dissertations with ThesisMasterISEL
 %%
-%% Version 20130704 (Jul 2013) v1.11
+%% Version 20130925 (Sep 2013) v1.12
 %% 
 %% Instituto Superior de Engenharia de Lisboa
 %% Instituto Politécnico de Lisboa
@@ -280,26 +280,73 @@
 \printotherlists 
 
 % Print other lists of contents according to instructions given above
-%%------------------------------------------------------------
-% Print document chapters
+%%
+% ----------------------------------------------------------------------
+%  Print Document Chapters
+% ----------------------------------------------------------------------
+%%
 \printchapters
 %%
-\cleardoublepage
-%%%------------------------------------------------------------
-%% Print the bibliography
-\bibliographystyle{plain}
-\bibliography{bibliography}
+% ----------------------------------------------------------------------
+%  Print Bibliography
+% ----------------------------------------------------------------------
+%%
+%\cleardoublepage
+%%%%------------------------------------------------------------
+%%% Print the bibliography
+%\bibliographystyle{plain}
+%\bibliography{bibliography}
+%%
+%%%%------------------------------------------------------------
+% Include all references in .bib file, even non-cited ones...
+\nocite{*}
+
+% Produces the bibliography section when processed by BibTeX
 %
-%%%------------------------------------------------------------
-%% Print the glossary
+% Bibliography style
+% > entries ordered alphabetically
+%\bibliographystyle{plain}
+% > unsorted with entries appearing in the order in which the citations appear.
+%\bibliographystyle{unsrt}
+% > entries ordered alphabetically, with first names and names of journals and months abbreviated
+%\bibliographystyle{abbrv}
+% > entries ordered alphabetically, with reference markers based on authors' initials and publication year
+%\bibliographystyle{alpha}
+%
+% Replacement bibliography styles provided by 'natbib' package
+% (plainnat.bst, abbrvnat.bst, unsrtnat.bst )
+% > entries ordered alphabetically
+\bibliographystyle{plainnat}
+% > unsorted with entries appearing in the order in which the citations appear.
+%\bibliographystyle{unsrtnat}
+% > entries ordered alphabetically, with first names and names of journals and months abbreviated
+%\bibliographystyle{abbrvnat}
+% > entries ordered alphabetically, with reference markers based on authors' initials and publication year
+%\bibliographystyle{alpha}
+
+
+% External bibliography database file in the BibTeX format
+\cleardoublepage
+\bibliography{bibliography} % file "bibliography.bib"
+% Add entry in the table of contents as chapter
+\addcontentsline{toc}{chapter}{\bibname}
+
+% ----------------------------------------------------------------------
+%  Print Glossary, if any!
+% ----------------------------------------------------------------------
+%%
 \cleardoublepage
 \printglossaries
 %
+%%
+% ----------------------------------------------------------------------
+%  Print appendixes, if any!  (optional)
+% ----------------------------------------------------------------------
+%%
 \cleardoublepage
 \setcounter{page}{1} \pagenumbering{roman}
-%%%------------------------------------------------------------
-%% Print appendixes, if any!
 \printappendixes 
+\cleardoublepage
 
 %% End of document
 \end{document} 
