New version of document

--- a/defaults.tex
+++ b/defaults.tex
@@ -12,7 +12,7 @@
 \workimage{phdcomics}
 
 % Scientific Area 
-\majorfield{Engenharia Informática}
+\majorfield{Engenharia Informática e de Computadores}
 
 % Department
 \department{Área Departamental de Engenharia de Electrónica e Telecomunicações e de Computadores}
