Actualização do Logo

--- a/template.tex
+++ b/template.tex
@@ -41,7 +41,7 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[msc,en,twoside,12pt,a4paper]{thesisisel} 
+\documentclass[msc,pt,twoside,12pt,a4paper]{thesisisel} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -58,6 +58,7 @@
 
 % Beautiful simple tables
 \usepackage{booktabs}
+
 
 % Use colors in background of table cells
 %\usepackage{colortbl}
@@ -328,6 +329,10 @@
 %\bibliographystyle{abbrvnat} % > entries ordered alphabetically, with first names and names of journals and months abbreviated
 
 %\bibliographystyle{alpha} % > entries ordered alphabetically, with reference markers based on authors' initials and publication year
+
+% Bibliography with page numbers
+% \backrefenglish 	% english version
+\backrefbrazil			% portuguese version
 
 % External bibliography database file in the BibTeX format
 \cleardoublepage
