--- a/defaults.tex
+++ b/defaults.tex
@@ -5,7 +5,7 @@
 \faculty{Instituto Politécnico de Lisboa}
 
 % University's logo
-\universitylogo{isellogo}
+\universitylogo{logo_iselnew}
 
 % Front Image
 % If there is no image then comment the following command with %
